--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.376.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
